# sdk-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  MIGRATION.md  README.md  SECURITY.md  codecov.yml  deny.toml  sdk-engineering-guide.md  sdk-roadmap.md  sdk-rust-specifications.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  integration.yml  release.yml
docs/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: async-runtime.mdx  authentication.mdx  configuration.mdx  output-handling.mdx  render-modes.mdx
docs/src/content/docs/getting-started/: install.mdx  quick-start.mdx
docs/src/content/docs/production/: cancellation.mdx  errors.mdx  observability.mdx  retries-and-idempotency.mdx
docs/src/content/docs/support/: changelog.mdx  license.mdx  migration.mdx
docs/src/preset/: README.md  canonical-errors.json  canonical-methods.json  index.js  languages.js  preset.js  sidebar.js  theme.js
docs/src/preset/components/: ApiKeyCallout.astro  ErrorTable.astro  LangSwitcher.astro  MethodSignature.astro  ParamsTable.astro  RuntimeMatrix.astro
docs/src/preset/remark/: canonical-slugs.js  enforce-page-shape.js  index.js  shared.js
docs/src/preset/styles/: poli-page.css
examples/: demo.rs  documents-delete.rs  documents-get.rs  documents-preview.rs  documents-thumbnails.rs  poli-page-constructor.rs  render-document.rs  render-pdf-stream.rs  render-pdf.rs  render-preview.rs  render-to-file.rs
scripts/: install-hooks.sh  release.sh
scripts/extract-api/: errors-page.ts  main.ts  meta-sidecar.ts  method-pages.ts  package.json  runtime-support-page.ts  rustdoc-to-mdx.ts  rustdoc-types.ts  types-page.ts
src/: client.rs  documents.rs  error.rs  fs.rs  lib.rs  render.rs  retry.rs
src/blocking/: fs.rs  mod.rs
src/internal/: constants.rs  http.rs  mod.rs  url.rs  uuid.rs
src/types/: document.rs  input.rs  mod.rs  page_format.rs  preview.rs  thumbnail.rs
tests/: blocking.rs  documents.rs  fs.rs  render.rs  smoke.rs
tests/integration/: main.rs  render.rs
