[package]
name          = "poli-page"
version       = "1.0.0-rc.1"
edition       = "2021"
rust-version  = "1.93"
authors       = ["Poli Page"]
description   = "Poli Page SDK for Rust — render PDFs from HTML templates via the Poli Page API"
homepage      = "https://poli.page"
repository    = "https://github.com/poli-page/sdk-rust"
documentation = "https://docs.rs/poli-page"
readme        = "README.md"
license       = "MIT OR Apache-2.0"
keywords      = ["pdf", "html", "template", "rendering", "poli-page"]
categories    = ["api-bindings", "web-programming"]
exclude       = ["/.github", "/scripts", "/examples/templates", "/examples/outputs"]

[lib]
name = "poli_page"
path = "src/lib.rs"

[dependencies]
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio        = { version = "1.40", default-features = false, features = ["time", "rt", "fs", "io-util"] }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
thiserror    = "2.0"
uuid         = { version = "1.10", features = ["v4", "fast-rng"] }
bytes        = "1.7"
futures-core = "0.3"
tracing      = "0.1"
http         = "1.1"
url          = "2.5"
httpdate     = "1.0"
rand         = "0.10"

[dev-dependencies]
tokio              = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
wiremock           = "0.6"
serde_json         = "1.0"
tempfile           = "3.13"
futures-util       = "0.3"
tracing-subscriber = "0.3"
# Direct reqwest access for the `PoliPageBuilder::http_client` test/doctest;
# consumers wanting to inject a custom client must add reqwest themselves.
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
default     = ["rustls-tls"]
blocking    = ["reqwest/blocking", "tokio/rt-multi-thread"]
rustls-tls  = ["reqwest/rustls-tls"]
native-tls  = ["reqwest/native-tls"]
integration = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets      = ["x86_64-unknown-linux-gnu"]
